testsuite/tests/arrows/should_fail/T2111.stderr

T2111.hs:6:23: error: [GHC-66043]
    Arrow command found where an expression was expected:
      undefined -< x

T2111.hs:6:41: error: [GHC-66043]
    Arrow command found where an expression was expected:
      undefined -< x
